--- a/calculator.html
+++ b/calculator.html
@@ -3,7 +3,7 @@
  <head>
   <link rel="stylesheet" href="css/style.css">
   <script src="js/script.js"></script>
-  <title>calc 1.0</title>
+  <title>calculator 1.0</title>
  </head>
  <body>
   
