--- a/calculator.html
+++ b/calculator.html
@@ -9,8 +9,17 @@
   
 <div class ="background">
 
-	<div id="output"><output name="result">0</output></div>
-	
+
+
+
+	<div id="output"><h2>0</h2></div>
+
+	<input type="button" id="1" onclick="myFunction(this.id)">
+  <input type="button" id="2" onclick="myFunction(this.id)">
+  <input type="button" id="3" onclick="myFunction(this.id)">
+ 
+  <input type="button" id="+" onclick="myFunction(this.id)">
+  <input type="button" id="=" onclick="myFunction(this.id)">
 
 </div>
 
