--- a/calculator.html
+++ b/calculator.html
@@ -12,14 +12,18 @@
 
 
 
-	<div id="output"><h2>0</h2></div>
+	<div id="output"><h2 id="numers">0</h2></div>
 
-	<input type="button" id="1" onclick="myFunction(this.id)">
-  <input type="button" id="2" onclick="myFunction(this.id)">
-  <input type="button" id="3" onclick="myFunction(this.id)">
+	<div id="buttons">
+
+	<input type="button" id="1" value = "1" onclick="myFunction(this.id)">
+    <input type="button" id="2" value = "2" onclick="myFunction(this.id)">
+    <input type="button" id="3" value = "3" onclick="myFunction(this.id)">
  
-  <input type="button" id="+" onclick="myFunction(this.id)">
-  <input type="button" id="=" onclick="myFunction(this.id)">
+    <input type="button" id="+" value = "+" onclick="myPlus()">
+    <input type="button" id="clear" value = "clear" onclick="myClear()">
+    <input type="button" id="=" value = "=" onclick="myEqual()">
+   </div>
 
 </div>
 
