--- a/calculator.html
+++ b/calculator.html
@@ -11,17 +11,26 @@
 
 
 
+<div id="output"><h2 id="numers">0</h2></div>
 
-	<div id="output"><h2 id="numers">0</h2></div>
+   <div id="buttons">
 
-	<div id="buttons">
-
-	<input type="button" id="1" value = "1" onclick="myFunction(this.id)">
+	<input type="button" id="7" value = "7" onclick="myFunction(this.id)">
+    <input type="button" id="8" value = "8" onclick="myFunction(this.id)">
+    <input type="button" id="9" value = "9" onclick="myFunction(this.id)">	
+    <input type="button" id="*" value = "*" onclick="myMultiply()">
+    <input type="button" id="clear" value = "clear" onclick="myClear()">
+    <input type="button" id="4" value = "4" onclick="myFunction(this.id)">
+    <input type="button" id="5" value = "5" onclick="myFunction(this.id)">
+    <input type="button" id="6" value = "6" onclick="myFunction(this.id)">
+    <input type="button" id="/" value = "/" onclick="myDivide()">
+    <input type="button" id="-" value = "-" onclick="myMinus()">
+    <input type="button" id="1" value = "1" onclick="myFunction(this.id)">
     <input type="button" id="2" value = "2" onclick="myFunction(this.id)">
     <input type="button" id="3" value = "3" onclick="myFunction(this.id)">
- 
-    <input type="button" id="+" value = "+" onclick="myPlus()">
-    <input type="button" id="clear" value = "clear" onclick="myClear()">
+    <input type="button" id="plus" value = "+" onclick="myPlus()">
+    <input type="button" id="0" value = "0" onclick="myFunction(this.id)">
+    <input type="button" id="." value = "," onclick="myFunction(this.id)">
     <input type="button" id="=" value = "=" onclick="myEqual()">
    </div>
 
@@ -29,5 +38,5 @@
 
 
 
- </body>
+</body>
 </html>
