--- a/calculator.html
+++ b/calculator.html
@@ -3,7 +3,7 @@
  <head>
   <link rel="stylesheet" href="css/style.css">
   <script src="js/script.js"></script>
-  <title>calculator 1.0</title>
+  <title>calculator 1.1</title>
  </head>
  <body>
   
@@ -29,9 +29,12 @@
     <input type="button" id="2" value = "2" onclick="myFunction(this.id)">
     <input type="button" id="3" value = "3" onclick="myFunction(this.id)">
     <input type="button" id="plus" value = "+" onclick="myPlus()">
+    <input type="button" id="Del" value = "Del" onclick="myDel()">
     <input type="button" id="0" value = "0" onclick="myFunction(this.id)">
     <input type="button" id="." value = "," onclick="myFunction(this.id)">
     <input type="button" id="=" value = "=" onclick="myEqual()">
+    <input type="button" id="sqr" value = "sqr" onclick="mySqr()">
+    <input type="button" id="%" value = "%" onclick="myPers()">
    </div>
 
 </div>
