--- a/calculator.html
+++ b/calculator.html
@@ -1,15 +1,40 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
  <head>
+  <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
   <link rel="stylesheet" href="css/style.css">
   <script src="js/script.js"></script>
-  <title>calculator 1.1</title>
+  <title>calculator 1.2</title>
+
+
+
+<!--<script type="text/javascript">
+$(document).ready(function(e){
+   var left = 0,
+   top = 0,
+   element = $('body'),
+   offset =  { left: element.offset().left, top: element.offset().top };
+   element.bind('mousemove', function(e){
+      left = (e.pageX-offset.left);
+      top = (e.pageY-offset.top);
+      $(this).css({
+          backgroundPosition: '-'+(0.1*left)+'px -'+(0.1*top)+'px'
+          
+      });
+    });
+});
+</script>
+
+-->
+
+
  </head>
  <body>
-  
+
+
 <div class ="background">
 
-
+<div class="name">--Calculator&nbsp;v 1.3--</div>
 
 <div id="output"><h2 id="numers">0</h2></div>
 
@@ -19,7 +44,7 @@
     <input type="button" id="8" value = "8" onclick="myFunction(this.id)">
     <input type="button" id="9" value = "9" onclick="myFunction(this.id)">	
     <input type="button" id="*" value = "*" onclick="myMultiply()">
-    <input type="button" id="clear" value = "clear" onclick="myClear()">
+    <input type="button" id="clear" value = "C" onclick="myClear()">
     <input type="button" id="4" value = "4" onclick="myFunction(this.id)">
     <input type="button" id="5" value = "5" onclick="myFunction(this.id)">
     <input type="button" id="6" value = "6" onclick="myFunction(this.id)">
