--- a/calculator.html
+++ b/calculator.html
@@ -7,7 +7,7 @@
   <title>calculator 1.4</title>
 
 
-
+<!--
 <script type="text/javascript">
 $(document).ready(function(e){
    var left = 0,
@@ -24,7 +24,7 @@ $(document).ready(function(e){
     });
 });
 </script>
-
+-->
 
 
 
@@ -65,7 +65,7 @@ $(document).ready(function(e){
 
 </div>
 
-<div class="podval"></div>
+<!--<div class="podval"></div>  -->
 
 </body>
 </html>
